Updates per feedback on PR#474

--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -71,7 +71,7 @@ Defaults to 1 second.
 == Disabling the Salt Mine
 
 In older versions, {productname} used a tool called Salt mine to check minion availability.
-The Salt mine would cause minions to ping the server every hour, which created significant load.
+The Salt mine would cause minions to contact the server every hour, which created significant load.
 With the introduction of a more efficient mechanism in {productname}{nbsp}3.2, the Salt mine is no longer required.
 Instead, the {productname} server uses Taskomatic to ping only the minions that appear to have been offline for twelve hours or more, with all minions being pinged at least once in every twenty four hour period by default.
 
@@ -86,7 +86,7 @@ salt '*' state.sls util.mgr_mine_config_clean_up
 ----
 
 This will restart the minions and generate some Salt events to be processed by the server.
-However, if you have a large number of minions, handling these events could create excessive load.
+If you have a large number of minions, handling these events could create excessive load.
 To avoid this, you can execute the command in batch mode with this command:
 
 ----
