Update to new formula path, and add admonition

--- a/modules/salt/pages/salt-formulas.adoc
+++ b/modules/salt/pages/salt-formulas.adoc
@@ -136,7 +136,7 @@ For example, the [package]#locale-formula# states directory is located in:
 +
 
 ----
-/usr/share/susemanager/formulas/states/locale/
+/usr/share/salt-formulas/states/locale/
 ----
 The Formula Metadata Directory::
 The metadata directory contains a [path]``form.yml`` file which defines the forms for {productname} and an optional [path]``metadata.yml`` file that can contain additional information about a formula.
@@ -144,7 +144,7 @@ For example, the [package]#locale-formula# metadata directory is located in:
 +
 
 ----
-/usr/share/susemanager/formulas/metadata/locale/
+/usr/share/salt-formulas/metadata/locale/
 ----
 
 Custom Formulas::
@@ -173,6 +173,12 @@ These files are detected as form recipes and may be applied to groups and system
 /srv/formula_metadata/<custom-formula-name>/form.yml
 ----
 
+[NOTE]
+====
+The Salt formula directory changed in {productname}{nbsp}4.0.
+The old directory location, [path]``/usr/share/susemanager/formulas``, will continue to work for some time.
+You should ensure that you update to the new directory location, [path]``/usr/share/salt-formulas/`` as soon as possible.
+====
 
 
 [[best.practice.salt.formulas.pillar]]
@@ -184,7 +190,7 @@ These files are detected as form recipes and may be applied to groups and system
 For example, the [path]``form.yml`` that is included with the [package]#locale-formula# is placed in:
 
 ----
-/usr/share/susemanager/formulas/metadata/locale/form.yml
+/usr/share/salt-formulas/metadata/locale/form.yml
 ----
 
 See part of the following [package]#locale-formula# example:
@@ -788,7 +794,7 @@ This includes the `formulas.sls` file located in:
 +
 
 ----
-/usr/share/susemanager/formulas/states/
+/usr/share/salt-formulas/states/
 ----
 +
 
@@ -817,7 +823,7 @@ Currently this process is initiated by the [path]``mgr_master_tops.py`` script w
 +
 
 ----
-/usr/share/susemanager/formulas/states/
+/usr/share/salt-formulas/states/
 ----
 +
 
@@ -886,7 +892,7 @@ The locale formula allows setting [guimenu]``Timezone` and [guimenu]``Keyboard a
 === Domain Name System (Bind)
 
 With the bind formula you set up and configure a Domain Name System (DNS) server.
-For technical information about the bind formula and low-level pillar data, see the [path]``README.rst`` file on the {productname} server: [path]``/usr/share/susemanager/formulas/metadata/bind/README.rst``.
+For technical information about the bind formula and low-level pillar data, see the [path]``README.rst`` file on the {productname} server: [path]``/usr/share/salt-formulas/metadata/bind/README.rst``.
 
 DNS is needed to resolve the domain names and host names into IP addresses.
 For more information about DNS, see the SLES Administration Guide, Services, The Domain Name System.
@@ -944,7 +950,7 @@ Then it will start the DNS service (``named``).
 
 With the dhcpd formula you set up and configure a DHCP server (Dynamic Host Configuration Protocol).
 For technical information about the dhcpd formula and low-level pillar data, see the Pillar example file
-[path]``/usr/share/susemanager/formulas/metadata/dhcpd/pillar.example``.
+[path]``/usr/share/salt-formulas/metadata/dhcpd/pillar.example``.
 
 DHCP is needed to define network settings centrally (on a server) and let clients retrieve and use this information for local host configuration.
 For more information about DHCP, see the SLES Administration Guide, Services, DHCP.
