--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -12,6 +12,7 @@ This means that you must register them with the {scc}.
 For more information about registering  {productname} with {scc}, see xref:installation:general-requirements.adoc[].
 ====
 
+Depending on the public cloud network you are using, you can locate the {productname} installation images by searching for the  keywords [package]``suse``, [package]``manager``, [package]``proxy``, or [package]``BYOS``.
 
 == Instance Requirements
 
@@ -32,91 +33,91 @@ Instructions for setting up an external virtual disk are contained in this secti
 
 
 
-== Setup
+== Network Setup
 
-Run an instance of the {productname} Server or {productname} Proxy image as published by SUSE.
-The images are identifiable by the suse, manager, server or proxy, and byos keywords in each public cloud environment.
-The {productname} instance must run in a network access restricted environment such as the private subnet of a VPC or with an appropriate firewall setting such that it can only be accessed by machines in the IP ranges you use.
-A generally accessible {productname} instance violates the terms of the {productname} EULA.
-Access to the web interface of SUSE Manager requires https.
 
-{productname} requires a stable and reliable hostname, changing the hostname can create errors.
-In this procedure, all commands need to be executed as the root user.
+On a public cloud service, you must run {productname} within a restricted network, such as VPC private subnet with an appropriate firewall setting.
+The instance must only be able to be accessed by machines in your specified IP ranges.
 
-.Procedure: Setting the Hostname
+[WARNING]
+====
+A world-accessible {productname} instance violates the terms of the {productname} EULA, and it will not be supported by {suse}.
+====
+
+When you are setting up your networking environment, you will need to ensure that you allow https, in order to be able access the {productname} {webui}.
+
+
+=== Set the hostname
+
+{productname} requires a stable and reliable hostname.
+Changing the hostname at a later point can create errors.
+
+In most public cloud environments, the method shown in this section will work correctly.
+However, you will have to perform the same modification for every client.
+
+You might prefer to manage DNS resolution by creating a DNS entry in your network environmentinstead.
+
+You can also manage hostname resolution by editing the [path]``/etc/resolv.conf`` file.
+Depending on the order of your setup, if you start the {productname} instance prior to setting up DNS services the file may not contain the appropriate [systemitem]``search`` directive.
+Check that the proper search directive exists in [path]``/etc/resolv.conf`` and add it if it is missing.
+
+.Procedure: Setting the host name locally
+
 . Disable hostname setup by editing the DHCP configuration file at [path]``/etc/sysconfig/network/dhcp``, and adding this line:
 +
-
 ----
 DHCLIENT_SET_HOSTNAME="no"
 ----
-
-. Set the hostname locally using the [command]``hostnamectl`` command.
-Ensure you use the system name, not the fully qualified domain name (FQDN).
-The FQDN is set by the cloud framework; for example if  *cloud_instance.cloud.net* is the FQDN, *cloud_instance* is the system name and *cloud.net* is the domain name:
+. Set the hostname locally with the [command]``hostnamectl`` command.
+Ensure you use the system name, not the FQDN.
+For example, if the FQDN is [path]``system_name.example.com``, the system name is [path]``system_name``, and the domain name is [path]``example.com``.
 +
-
 ----
 hostnamectl set-hostname system_name
 ----
-+
-
 . Create a DNS entry in your network environment for domain name resolution, or force correct resolution by editing the [path]``/etc/hosts`` file:
 +
-
 ----
 $ echo "${local_address} suma.cloud.net suma" >> /etc/hosts
 ----
 +
-
-You can locate the local address by checking your public cloud web console, or from the command line using these commands:
+You can find the local address by checking your public cloud web console, or from the command line :
 +
-
-*** Amazon EC2 instance:
+* Amazon EC2 instance:
 +
-
 ----
 $ ec2metadata --local-ipv4
 ----
-*** Google Compute Engine:
+* Google Compute Engine:
 +
-
 ----
 $ gcemetadata --query instance --network-interfaces --ip
 ----
 +
-
-*** Microsoft Azure:
+* Microsoft Azure:
 +
-
 ----
 $ azuremetadata --internal-ip
 ----
 
+=== Set up DNS resolution
 
-Forcing DNS resolution by modifying the [path]``/etc/hosts`` file will work correctly in most environments.
-However, you will have to perform the same modification for any client that is to be managed with this {productname} instance.
-In most cases, it will be easier to manage the DNS resolution by creating a DNS entry in your network environment.
-
-
-One other method for managing hostname resolution is by editing the [path]``/etc/resolv.conf`` file.
-Depending on the order of your setup, for example if you started the {productname} instance prior to setting up DNS services the file may not contain the appropriate *search* directive.
-Double check that the proper search directive exists in [path]``/etc/resolv.conf``.
-In our example the directive would be **search cloud.net**.
-If the directive is missing add it to the file.
-
-
-For an update of the DNS records for the instance within the DNS service of your network environment, refer to the cloud service provider documentation for detailed instructions:
+You will need to update the DNS records for the instance within the DNS service of your network environment.
+Refer to the cloud service provider documentation for detailed instructions:
 *** http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/vpc-dns.html[ DNS setup on Amazon EC2]
 *** https://cloud.google.com/compute/docs/networking[ DNS setup on Google Compute Engine]
 *** https://azure.microsoft.com/en-us/documentation/articles/dns-operations-recordsets[ DNS setup on Microsoft Azure]
 
-If you run a {productname} Server instance, you can run YaST after the instance is launched to ensure the external storage is attached and prepared according to <<using-separate-storage-volume>>, and the DNS resolution is set up as described:
+If you run a {productname} Server instance, you can run YaST after the instance is launched to ensure the external storage is attached and prepared correctly, and that DNS resolution is set up as described:
 
 ----
 $ /sbin/yast2 susemanager_setup
 ----
 
+
+////
+
+No need to duplicate this, since it exists within the docs suite. LKB 2019-05-29
 
 Note that the setup of {productname} from this point forward does not differ from the documentation in the https://www.suse.com/documentation/suse_manager[SUSE Manager Guide].
 
