Server unified installer check ke (#488)
* update images and use them; partially renamed

* add E+M

* cleanup server setup description

--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -10,22 +10,31 @@ For information on registering with {scc}, or obtaining installation media, see 
 
 [NOTE]
 ====
-If you want to install {susemgr} on a virtual machine, ensure your virtual machine has enough disk space and RAM by checking the requirements at xref:hardware-requirements.adoc[Hardware].
+Before installing {susemgr}, ensure your physical or virtual machine has enough disk space and RAM by checking the requirements at xref:hardware-requirements.adoc[Hardware].
 ====
 
 
 
 .Procedure: Installing {susemgr} Server from a DVD image
 
-. Boot your server from the installation image, you might need to adjust the boot order in the BIOS.
+. Boot your server from the installation image.
+If booting fails you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
 +
 image::unifiedinstaller-install.png[scaledwidth=80%]
 . In the [guimenu]``Language, Keyboard and Product Selection`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
-+
-image::unifiedinstaller-product.png[scaledwidth=80%]
 . Read and agree to the End User Licence Agreement, and click btn:[Next].
++
+image::unifiedinstaller-registration.png[scaledwidth=80%]
 . In the [guimenu]``Registration`` screen, check the [guimenu]``Register System via scc.suse.com`` checkbox, enter your {scc} credentials, and click btn:[Next].
+// +
+// The registration server offers update repositories.
++
+image::unifiedinstaller-extensions.png[scaledwidth=80%]
+. In the [guimenu]``Available Extensions and Modules`` screen, select additional extensions or modules you require, and click btn:[Next].
+Mandatory modules are pre-selected and you cannot disable them.
++
+image::unifiedinstaller-addon.png[scaledwidth=80%]
 . OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
 . In the [guimenu]``Suggested Partitioning`` screen, accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
