--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -173,7 +173,7 @@ autoupgrade=1 Y2DEBUG=1
 The debug setting is not required but can help with investigating future problems you might encounter.
 The [literal]``autoupgrade`` parameter, however, is mandatory.
 . Select the proxy from the system list in {productname}, click the [guimenu]``Provisioning`` tab, and select the profile you created earlier.
-. Click btn:[Start Autoinstallation].
+. Click btn:[Schedule Autoinstallation and Finish].
 The system will download the needed files, change the bootloader entries, reboot, and start the upgrade.
 
 
