--- a/modules/installation/pages/install-proxy-unified.adoc
+++ b/modules/installation/pages/install-proxy-unified.adoc
@@ -39,8 +39,9 @@ The primary goal of a {susemgrproxy} is to improve {productname} performance by 
 
 . To boot the Unified Installer from the installation image, you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
-+
-image::unifiedinstaller-install.png[scaledwidth=80%]
+// +
+// image::unifiedinstaller-install.png[scaledwidth=80%] (this image is with
+// server selected.
 . In the [guimenu]``Language, Keyboard and Product Selection`` screen, check the [guimenu]``SUSE Manager Proxy`` checkbox, and click btn:[Next].
 +
 image::unifiedinstaller-proxy.png[scaledwidth=80%]
