Docs: explain how comps file are processed
Add a section to explain how comps file are processed when a channel is
composed by multiple repositories.

Re: http://mailman.suse.de/mlarch/SuSE/galaxy-devel/2019/galaxy-devel.2019.05/msg00122.html

--- a/modules/reference/pages/software/manage-channels.adoc
+++ b/modules/reference/pages/software/manage-channels.adoc
@@ -112,3 +112,13 @@ On the [guimenu]``Repositories`` page, assign software repositories to the chann
 
 The [guimenu]``Manage Repositories`` tab to the left shows all assigned repositories.
 Click a name to see details and possibly delete a repository.
+
+[IMPORTANT]
+.Channel with multiple repositories and comps files
+====
+Comps file might be associated with a repository and contains the packages group(s) available through the repository.
+
+When syncing multiple repositories within the same channel, the last synced repository that contains a comps file will be used as the channel comps file.
+
+If you still want to access all comps files, be sure to map a repository to a channel in a one-to-one fashion (1:1).
+====
