--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -213,7 +213,8 @@ image::monitoring_configure_formula.png[scaledwidth=80%]
 
 == Set up Visualization with Grafana
 
-The Grafana website contains dozens of dashboards uploaded by the community, including an example {productname} dashboard that can help you to get started.
+The Grafana website contains dozens of dashboards uploaded by the community.
+For an example {productname} dashboard to help you to get started, see https://grafana.com/dashboards/10277.
 For more information, see: https://grafana.com/dashboards
 
 To use Grafana with {productname}, you need to have enabled metrics in the {productname} {webui}, and configured your Prometheus instance to collect those metrics.
@@ -236,5 +237,3 @@ systemctl enable --now grafana-server
 image::monitoring_grafana_example.png[scaledwidth=80%]
 
 Grafana settings are configured in [path]``/etc/grafana/grafana.ini``.
-
-// TODO:: include direct link for the SUSE Manager dashboard (once uploaded).
