Update wording to make meaning clearer.

--- a/modules/reference/pages/software/manage-channels.adoc
+++ b/modules/reference/pages/software/manage-channels.adoc
@@ -116,9 +116,8 @@ Click a name to see details and possibly delete a repository.
 [IMPORTANT]
 .Channel with multiple repositories and comps files
 ====
-Comps file might be associated with a repository and contains the packages group(s) available through the repository.
-
-When syncing multiple repositories within the same channel, the last synced repository that contains a comps file will be used as the channel comps file.
-
-If you still want to access all comps files, be sure to map a repository to a channel in a one-to-one fashion (1:1).
+Some repositories have a comps file associated with them.
+Comps files are used to define how packages are grouped within the repository.
+If you are synchronizing multiple repositories within the same channel, the comps file of the most recently synchronized repository will be used for the entire channel.
+If you want to access all your repository comps files, you will need to map each repository to a different channel.
 ====
