removed draft watermark from pdfs

--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -1,8 +1,8 @@
 [[patch.notes.version.4.0]]
 = Documentation Release Notes for {docversion}
 include::ROOT:partial$entities.adoc[]
-:revnumber: RC1
-:revdate: May 15, 2019
+:revnumber: 4.0
+:revdate: May 31, 2019
 
 // !!!CHANGE THIS FILE ON THE MASTER BRANCH ONLY BEFORE PUBLISHING A RELEASE BRANCH!!!
 // Otherwise this file is out of sync with our develop/master branch
@@ -10,6 +10,52 @@ include::ROOT:partial$entities.adoc[]
 == Latest Changes
 
 {revnumber} {revdate}
+
+
+== {docversion} Changes
+
+{productname} {docversion} includes a large number of changes to documents, additional material and a massive volume of qualitative updates.
+
+The following list covers the primary content changes and additions.
+
+.Changes During {docversion}
+* Updated ISS section
+* Updated troubleshooting
+* Updated IBM Z section
+* Updated to Unified Installer in Install Guide and Retail Guide
+* Added Ubuntu Clients
+* New live patching section for SLES 15
+* New Content Staging feature/section
+* Channel-Setup with Autoyast
+* Update - Installing SUSE Manager Proxy Servers
+* Creating Delta Images
+* Update - smdba section
+* Update - Cobbler section
+* Update - Procedure for restoring from a manual backup
+* Update - Formulas with forms
+* The minion-action-cleanup task was added
+* See extensions/xref-converter.rb for converting xrefs into paths within our PDF documents
+* Reference - many xrefs have been updated (Systems and Users tabs remain)
+* Missing images have been restored
+* General editing and clean-up on many documents
+
+
+=== Known Issues in {docversion}
+
+xref-converter.rb::
+The converter still requires refactoring as several links are incorrectly transforming during PDF conversion.
+
+xrefs::
+Some cross references are broken leading between books. Fixes for these will be submitted in an update.
+
+search::
+The search field has been removed from the {productname} documentation WebUI. Use the **Help -> Search** page in the WebUI to look for topics. Search will be integrated into the documentation WebUI in an update. Search is also available on link:https:/www.suse.com/documentation/suse-manager/[].
++
+[NOTE]
+====
+From link:https:/www.suse.com/documentation/suse-manager/[] browse to {productname} 4.0 Documentation and use the search field to search in real-time through the docs.
+====
+
 
 == RC1 Changes
 
@@ -39,20 +85,24 @@ There are far too many changes to include in the following list but these suffic
 * General editing and clean-up on many documents
 
 
-=== Known Issues in {revnumber}
+=== Known Issues in RC1
 
 xref-converter.rb::
 The converter still requires refactoring as several links are incorrectly transforming during PDF conversion.
 
 xrefs::
-Though all other xrefs in the Reference Manual have been updated the *Systems* and *User* tabs remain for *GMC*.
-Books other than reference will be updated for *GMC*
+Some cross references are still broken across the books. Fixes for these will be submitted in an update.
+
+
+
 
 == Beta 3 Changes
 
 Our focus for {productname} {productnumber} was to finish shifting the sources from our old IA (Information Architecture) into our new one. The Reference, Installation and Administration guides are now close to where we like them to be.
 
 There are far too many changes to include in the following list but these sufficiently represent the larger changes.
+
+
 
 === Updated Items
 
