--- a/modules/ROOT/pages/index-suma.adoc
+++ b/modules/ROOT/pages/index-suma.adoc
@@ -30,7 +30,7 @@ The following documentation is available for {productname} version {productnumbe
 | Administration Guide       | xref:administration:intro.adoc[HTML] link:../pdf/suse_manager_administration_guide.pdf[PDF]
 | Salt Guide                 | xref:salt:salt-intro.adoc[HTML] link:../pdf/suse_manager_salt_guide.pdf[PDF]
 | Retail Guide               | xref:retail:retail-introduction.adoc[HTML] link:../pdf/suse_manager_retail_guide.pdf[PDF]
-| Architecture               | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/suse_manager_architecture.pdf[PDF]
+//| Architecture               | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/suse_manager_architecture.pdf[PDF]
 |===
 
 
