updated available documentation table for clarity

--- a/modules/ROOT/pages/index-suma.adoc
+++ b/modules/ROOT/pages/index-suma.adoc
@@ -23,13 +23,12 @@ The following documentation is available for {productname} version {productnumbe
 |===
 | Books | Available Formats | Books | Available Formats
 
-| Installation Guide         | xref:installation:install-intro.adoc[HTML] link:../pdf/suse_manager_installation_guide.pdf[PDF] | Client Configuration Guide | xref:client-configuration:client-config-overview.adoc[HTML] link:../pdf/suse_manager_client_configuration_guide.pdf[PDF]
-| Upgrade Guide              | xref:upgrade:upgrade-overview.adoc[HTML] link:../pdf/suse_manager_upgrade_guide.pdf[PDF]  | Reference Guide | xref:reference:intro.adoc[HTML] link:../pdf/suse_manager_reference_manual.pdf[PDF]
-| Administration Guide       | xref:administration:intro.adoc[HTML] link:../pdf/suse_manager_administration_guide.pdf[PDF] | Salt Guide | xref:salt:salt-intro.adoc[HTML] link:../pdf/suse_manager_salt_guide.pdf[PDF]
-| Retail Guide               | xref:retail:retail-introduction.adoc[HTML] link:../pdf/suse_manager_retail_guide.pdf[PDF] | |
+| Installation Guide | xref:installation:install-intro.adoc[HTML] link:../pdf/suse_manager_installation_guide.pdf[PDF] | Administration Guide | xref:administration:intro.adoc[HTML] link:../pdf/suse_manager_administration_guide.pdf[PDF]
+| Client Configuration Guide | xref:client-configuration:client-config-overview.adoc[HTML] link:../pdf/suse_manager_client_configuration_guide.pdf[PDF] | Salt Guide | xref:salt:salt-intro.adoc[HTML] link:../pdf/suse_manager_salt_guide.pdf[PDF]
+| Upgrade Guide | xref:upgrade:upgrade-overview.adoc[HTML] link:../pdf/suse_manager_upgrade_guide.pdf[PDF] | Retail Guide | xref:retail:retail-introduction.adoc[HTML] link:../pdf/suse_manager_retail_guide.pdf[PDF]
+| Reference Guide | xref:reference:intro.adoc[HTML] link:../pdf/suse_manager_reference_manual.pdf[PDF] | |
 //| Architecture               | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/suse_manager_architecture.pdf[PDF]
 |===
-
 
 
 
