--- a/modules/ROOT/pages/index-suma.adoc
+++ b/modules/ROOT/pages/index-suma.adoc
@@ -21,7 +21,7 @@ The following documentation is available for {productname} version {productnumbe
 
 [cols=4*, options="header"]
 |===
-| Books | Available Formats | Books | Available Formats
+| Document | Format | Document | Format
 
 | Installation Guide | xref:installation:install-intro.adoc[HTML] link:../pdf/suse_manager_installation_guide.pdf[PDF] | Administration Guide | xref:administration:intro.adoc[HTML] link:../pdf/suse_manager_administration_guide.pdf[PDF]
 | Client Configuration Guide | xref:client-configuration:client-config-overview.adoc[HTML] link:../pdf/suse_manager_client_configuration_guide.pdf[PDF] | Salt Guide | xref:salt:salt-intro.adoc[HTML] link:../pdf/suse_manager_salt_guide.pdf[PDF]
