--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -29,7 +29,7 @@ DNS resolution is also important for connecting clients.
 DNS is dependent on the cloud framework you  choose, refer to the cloud service provider documentation for detailed instructions.
 * We recommend that you locate software repositories, the server database, and the Proxy squid cache on an external virtual disk.
 This prevents data loss if the instance is unexpectedly terminated.
-Instructions for setting up an external virtual disk are contained in this section.toring the database and the repositories on an external virtual disk ensures that the data is not lost should the instance need to be terminated for some reason.
+Instructions for setting up an external virtual disk are contained in this section.
 
 
 
