--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -75,7 +75,7 @@ The Salt mine would cause minions to contact the server every hour, which create
 With the introduction of a more efficient mechanism in {productname}{nbsp}3.2, the Salt mine is no longer required.
 Instead, the {productname} server uses Taskomatic to ping only the minions that appear to have been offline for twelve hours or more, with all minions being contacted at least once in every twenty four hour period by default.
 You can adjust this by changing the [systemitem]``web.system_checkin_threshold`` parameter in [path]``rhn.conf``.
-The value is expressed in days, and the default value is [systemitem]``1``.
+The value is expressed in days, and the default value is [literal]``1``.
 
 Newly registered Salt minions will have the Salt mine disabled by default.
 If the Salt mine is running on your system, you can reduce load by disabling it.
