--- a/modules/architecture/pages/salt-data-locations.adoc
+++ b/modules/architecture/pages/salt-data-locations.adoc
@@ -14,9 +14,10 @@ Global static data *should not* be customized or edited by {productname} users. 
 |===
 | Directory | Function
 
-| /usr/share/susemanager/salt/  | custom modules, states, grains
-| /usr/share/susemanager/pillar_data/ |	global pillar data
-| /usr/share/salt-formulas/ | formulas
+| /usr/share/susemanager/salt/  | Custom modules, states, grains
+| /usr/share/susemanager/pillar_data/ |	Global pillar data
+| /usr/share/susemanager/formulas/ | Formulas
+| /usr/share/salt-formulas/ | Formulas (either for {productname} or stand-alone Salt)
 |===
 
 
