Adds one-liners to empty pages

--- a/modules/reference/pages/intro.adoc
+++ b/modules/reference/pages/intro.adoc
@@ -1,11 +1,10 @@
 [[reference-manual-intro]]
 = Introduction
 
-// PDF entities
-ifdef::backend-pdf[]
-include::_partials/entities.adoc[]
-endif::[]
+This document contains two sections:
 
-{sle}
+The ``{webui} Reference`` is organised to match the {productname} {webui}.
+As you work with the {webui}, you can consult the ``{webui} Reference`` to find out more about the section you are working on.
 
-
+The ``spacecmd Reference`` is intended to help you work with the [command]``spacecmd`` command line interface.
+It contains a complete list of [command]``spacecmd`` commands, organised alphabetically, and their correct usage.
