--- a/modules/reference/pages/help/documentation-version.adoc
+++ b/modules/reference/pages/help/documentation-version.adoc
@@ -1,3 +1,3 @@
-= Documentation Version
+= Documentation {productnumber}
 
-
+The [guimenu]``Documentation {productnumber}`` menu item provides a link to this documentation suite.
