--- a/modules/reference/pages/intro.adoc
+++ b/modules/reference/pages/intro.adoc
@@ -3,7 +3,7 @@
 
 This document contains two sections:
 
-The ``{webui} Reference`` is organised to match the {productname} {webui}.
+The ``{webui} Reference`` is organized to match the {productname} {webui}.
 As you work with the {webui}, you can consult the ``{webui} Reference`` to find out more about the section you are working on.
 
 The ``spacecmd Reference`` is intended to help you work with the [command]``spacecmd`` command line interface.
