--- a/modules/reference/pages/intro.adoc
+++ b/modules/reference/pages/intro.adoc
@@ -7,4 +7,4 @@ The ``{webui} Reference`` is organized to match the {productname} {webui}.
 As you work with the {webui}, you can consult the ``{webui} Reference`` to find out more about the section you are working on.
 
 The ``spacecmd Reference`` is intended to help you work with the [command]``spacecmd`` command line interface.
-It contains a complete list of [command]``spacecmd`` commands, organised alphabetically, and their correct usage.
+It contains a complete list of [command]``spacecmd`` commands, organized alphabetically, and their correct usage.
