--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -118,7 +118,7 @@ Enter your organization credentials in the {susemgr} {webui}:
 .Procedure: Entering Organization Credentials
 . In the {susemgr} {webui}, select menu:Main Menu[Admin > Setup Wizard].
 . From the [guimenu]``Setup Wizard`` page select the btn:[Organization Credentials] tab.
-. Click the btn:[Add a new credential].
+. Click btn:[Add a new credential].
 . In the pop-up, enter [guimenu]``Username`` and [guimenu]``Password``, and confirm with btn:[Save].
 
 When the credentials are confirmed with a check-mark icon, procede with <<proc-quickstart-first-channel-sync>>.
