--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -121,7 +121,7 @@ Enter your organization credentials in the {susemgr} {webui}:
 . Click btn:[Add a new credential].
 . In the pop-up, enter [guimenu]``Username`` and [guimenu]``Password``, and confirm with btn:[Save].
 
-When the credentials are confirmed with a check-mark icon, procede with <<proc-quickstart-first-channel-sync>>.
+When the credentials are confirmed with a check-mark icon, proceed with <<proc-quickstart-first-channel-sync>>.
 
 
 [[proc-quickstart-first-channel-sync]]
