--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -119,7 +119,7 @@ Enter your organization credentials in the {susemgr} {webui}:
 . In the {susemgr} {webui}, select menu:Main Menu[Admin > Setup Wizard].
 . From the [guimenu]``Setup Wizard`` page select the btn:[Organization Credentials] tab.
 . Click btn:[Add a new credential].
-. In the pop-up, enter [guimenu]``Username`` and [guimenu]``Password``, and confirm with btn:[Save].
+. In the dialog, enter [guimenu]``Username`` and [guimenu]``Password``, and confirm with btn:[Save].
 
 When the credentials are confirmed with a check-mark icon, proceed with <<proc-quickstart-first-channel-sync>>.
 
