added short temporary description of admin guide and fixed broken nav

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -1,7 +1,7 @@
 // Administration Guide Antora Navigation List
 ifndef::backend-pdf[]
 
-// * xref:intro.adoc[Administration Guide]
+* xref:intro.adoc[Administration Guide]
 // Image Management
 ** xref:image-management.adoc[Image Management]
 // Channel Management
