--- a/modules/administration/pages/intro.adoc
+++ b/modules/administration/pages/intro.adoc
@@ -1,7 +1,4 @@
 [[admin-manual-introduction]]
 = Introduction
 
-
-
-
-TODO: Introduction to the Admin Guide
+This guide provides guidance on performing Administrative tasks on {productname}.
