updated admin intro text

--- a/modules/administration/pages/intro.adoc
+++ b/modules/administration/pages/intro.adoc
@@ -1,4 +1,4 @@
 [[admin-manual-introduction]]
 = Introduction
 
-This guide provides guidance on performing Administrative tasks on {productname}.
+This book provides guidance on performing common Administrative tasks on {productname}.
