--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -110,11 +110,26 @@ After synchronizing with SCC clients may receive updates, and be organized into 
 
 This section covers synchronizing with SCC from the {webui} and adding your first client channel.
 
+Before you can synchronize software repositories with SCC, you will need enter Organization Credentials in {susemgr}.  These organization credentials (previously called mirror credentials) give you access to the SUSE product downloads.  You will find your organization credentials in https://scc.suse.com/organization.
+
+Enter your organization credentials in the {susemgr} {webui}:
+
+
+[[proc-admin-organization-credentials]]
+.Procedure: Entering Organization Credentials
+. In the {susemgr} {webui}, select menu:Main Menu[Admin > Setup Wizard].
+. From the [guimenu]``Setup Wizard`` page select the btn:[Organization Credentials] tab.
+. Click btn:[Add a new credential].
+. In the dialog, enter [guimenu]``Username`` and [guimenu]``Password``, and confirm with btn:[Save].
+
+When the credentials are confirmed with a check-mark icon, proceed with <<proc-quickstart-first-channel-sync>>.
+
+
 [[proc-quickstart-first-channel-sync]]
 .Procedure: Synchronizing with {scc}
-. From the {productname} {webui} start page select menu:Admin[Setup Wizard].
+. In the {webui}, select menu:Main Menu[Admin > Setup Wizard].
 
-. From the menu:Main Menu[Admin > Setup Wizard] page select the btn:[SUSE Products] tab.
+. From the [guimenu]``Setup Wizard`` page select the btn:[SUSE Products] tab.
 Wait a moment for the products list to populate.
 If you previously registered with {scc} a list of products will populate the table.
 This table lists architecture, channels, and status information.
