--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -13,7 +13,9 @@ ifeval::[{suma-content} == true]
 *** xref:install-server-unified.adoc[Install Server]
 *** xref:install-proxy-unified.adoc[Install Proxy]
 endif::[]
-*** xref:install-vm.adoc[Install VM]
+// better disabling for now; needs a complete overhaul
+// 2019-06-03, ke :
+// *** xref:install-vm.adoc[Install VM]
 *** xref:install-server.adoc[Install Server from Packages]
 //*** xref:install-proxy.adoc[Install Proxy from Packages]
 *** xref:install-ibmz.adoc[Install on IBM Z]
