cleanup installation module

--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -133,9 +133,7 @@ When the credentials are confirmed with a check-mark icon, proceed with <<proc-q
 Wait a moment for the products list to populate.
 If you previously registered with {scc} a list of products will populate the table.
 This table lists architecture, channels, and status information.
-For more information, see:
-
-pass:c[xref:FILENAME.adoc#vle.webui.admin.wizard.products[]]
+For more information, see xref:reference/admin/setup-wizard.adoc[Wizard].
 +
 
 image::admin_suse_products.png[scaledwidth=80%]
@@ -173,6 +171,5 @@ Monitor channel synchronization process in real-time by viewing channel log file
 tailf /var/log/rhn/reposync/<CHANNEL_NAME>.log
 ----
 
-After the channel sync process has completed proceed to:
+After the channel sync process has completed proceed to xref:client-configuration:manual-registration-overview.adoc[Client Registration].
 
- pass:c[xref:FILENAME.adoc#preparing.and.registering.clients[]]
