--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -58,4 +58,4 @@ For more information on disconnected setup and port configuration, see:
 
 * xref:client-configuration:disconnected-setup.adoc#client-cfg-reg-with-bootstrap-disconnected[Disconnected Setup]]
 
-* pass:c[xref:advanced_topics_ports.adoc#at-ports[Firewall Ports]]
+* xref:installation:ports.adoc[Ports]
