--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -192,7 +192,7 @@ cobbler sync
 
 Also can also be done after each a change within Cobbler that needs to be synchronized immediately.
 Otherwise Cobbler synchronization will also run automatically when needed.
-For more information about Cobbler, see pass:c[xref:FILENAME.adoc#advanced.topics.cobbler[]].
+For more information about Cobbler, see xref:client-configuration:cobbler.adoc[Cobbler].
 
 
 
@@ -228,12 +228,12 @@ Consider copying important data to a central place that can also be accessed by 
 ** Copy the activation keys from the previous server.
 Of course, it is always better to re-create the keys.
 . Shutdown the server.
-. Install a new {productname}{nbsp}{productnumber} Proxy, see pass:c[xref:FILENAME.adoc#at.manager.proxy.inst-and-clients[]].
+. Install a new {productname}{nbsp}{productnumber} Proxy, see xref:install-proxy-unified.adoc[Proxy Installation].
 . In the {productname} {webui} select the newly installed {susemgrproxy} and delete it from the systems list.
 [[step.at.proxy.migration3.replace.react]]
 . In the {webui}, create a reactivation key for the old proxy system: On the System Details tab of the old proxy click [guimenu]``Reactivation``.
 Then click [guimenu]``Generate New Key``, and remember it (write it on a piece of paper or copy it to the clipboard).
-For more information about reactivation keys, see pass:c[xref:FILENAME.adoc#s5-sm-system-details-react[]].
+For more information about reactivation keys, see xref:reference:systems/system-details/sd-reactivation.adoc[Reactivation Keys].
 . After the installation of the new proxy, perform the following actions (if needed):
 ** Copy the centrally saved data to the new proxy system.
 ** Install any other needed software.
