--- a/modules/administration/pages/tshoot-diskspace.adoc
+++ b/modules/administration/pages/tshoot-diskspace.adoc
@@ -22,7 +22,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 Running out of disk space can have a severe impact on the {productname} database and file structure which, in most cases, is not recoverable.
 You can recover disk space by removing unused custom channels and redundant database entries before you run out of space entirely.
 
-For instructions on how to delete custom channels, see xref:channel-management[].
+For instructions on how to delete custom channels, see xref:administration:channel-management.adoc[].
 
 .Procedure: Resolving redundant database entries
 . Use the [command]``spacewalk-data-fsck`` command to list any redundant database entries.
