--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -26,10 +26,4 @@ Autoinstallation is not currently available for systems using Salt (system type 
 Kickstart files can be created, modified, and managed within the {productname} Web interface.
 
 {productname} also features the Cobbler installation server.
-For more information on Cobbler, see:
-
-//TODO Add link to cobbler documentation.
-
-
-pass:c[xref:FILENAME.adoc#advanced.topics.cobbler[]].
-
+For more information on Cobbler, see xref:client-configuration:cobbler.adoc[].
