--- a/modules/client-configuration/pages/autoyast.adoc
+++ b/modules/client-configuration/pages/autoyast.adoc
@@ -83,4 +83,4 @@ Once the {ay} profile has been created, use the URL from the menu:Autoinstallati
 
 To obtain specific instructions for conducting PXE {ay} installation, refer to the _Using PXE Boot_ section of the [ref]_SUSE Linux Enterprise Deployment Guide_.
 
-Starting with pass:c[xref:FILENAME.adoc#ref.webui.systems.autoinst.profiles[]], {ay} options available from menu:Systems[Kickstart] are described.
+For more information about Kickstart options, see xref:reference:systems/autoinst-profiles.adoc[].
