--- a/modules/client-configuration/pages/clients-and-activation-keys.adoc
+++ b/modules/client-configuration/pages/clients-and-activation-keys.adoc
@@ -33,7 +33,7 @@ For example, ``SLES12-SP4`` for {sls}{nbsp}12{nbsp}SP4.
 ====
 Do not use commas in the [guimenu]``Key`` field for any {suse} products.
 However, you *must* use commas for Red Hat Products.
-For more information, see pass:c[xref:FILENAME.adoc#ref.webui.systems.activ-keys[]].
+For more information, see xref:reference:activation-keys.adoc[].
 ====
 +
 . In the [guimenu]``Base Channels`` drop-down box, select the appropriate base software channel, and allow the relevant child channels to populate.
@@ -110,7 +110,7 @@ sles12-sp2-test_packages-blg_502-room_21-ppc64le
 ====
 Do not use commas in the [guimenu]``Key`` field for any {suse} products.
 However, you *must* use commas for Red Hat Products.
-For more information, see pass:c[xref:FILENAME.adoc#ref.webui.systems.activ-keys[]].
+For more information, see xref:reference:activation-keys.adoc[].
 ====
 
 .Included Channels
@@ -166,4 +166,4 @@ This command will generate the bootstrap script and place them in [path]``/srv/w
 
 Alternatively, you can use the {productname} {webui} to create your bootstrap script template, from menu:Overview[Tasks].
 
-For more information, see xref:registering.clients.bootstrap[].
+For more information, see xref:client-configuration:registration-bootstrap.adoc[].
