--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -102,7 +102,7 @@ filename "pxelinux.0";} <5>
 ==== Setting up PXE Boot in KVM
 
 It is possible to set up PXE booting in KVM, however we do not recommend you use this method for production systems.
-This method can replace the [guilabel]``next-server`` setting on a DHCP server, as described in pass:c[xref:FILENAME.adoc#advanced.topics.cobbler.reqs.dhcp.notmanaged[]].
+
 Edit the network XML description with [command]``virsh``:
 
 . Produce an XML dump of the current description:
@@ -377,7 +377,7 @@ For more options, such as setting hostname or IP addresses, refer to the Cobbler
 == Using Cobbler Templates
 
 The {productname} web interface allows you to create variables for use with Kickstart distributions and profiles.
-For more information on creating Kickstart profile variables, refer to pass:c[xref:FILENAME.adoc#s4-sm-system-kick-details-variables[]].
+For more information on creating Kickstart profile variables, refer to xref:reference:systems/autoinst-distributions.adoc[].
 
 Kickstart variables are part of an infrastructure change in {productname} to support templating in Kickstart files.
 Kickstart templates are files that describe how to build Kickstart files, rather than creating specific Kickstarts.
