--- a/modules/client-configuration/pages/creating-activation-keys.adoc
+++ b/modules/client-configuration/pages/creating-activation-keys.adoc
@@ -19,14 +19,14 @@ image::systems_create_activation_key.png[scaledwidth=80%]
 . In the [guimenu]``Key`` field, enter the distribution and service pack associated with the key. For example, ``SLES12-SP4`` for {sls}{nbsp}12{nbsp}SP4.
 +
 
-.Allowed Characters
-WARNING: Do not use commas in the [guimenu]``Key`` field for any {suse} products.
+[IMPORTANT]
+====
+Do not use commas in the [guimenu]``Key`` field for any {suse} products.
 However, you *must* use commas for Red Hat Products.
-For more information, see pass:c[xref:FILENAME.adoc#ref.webui.systems.activ-keys[]].
-+
+For more information, see xref:reference:activation-keys.adoc[].
+====
 
-. In the [guimenu]``Base Channels`` drop-down box, select the {sle} channel that you added during
-pass:c[xref:FILENAME.adoc#gs-syncing-with-scc[]].
+. In the [guimenu]``Base Channels`` drop-down box, select the {sle} channel.
 
 . When the base channel is selected the list of available child channels will get fetched and displayed in real time below the base channel.
 Select the child channels you need (for example, the {susemgr} tools and the updates channels that are actually mandatory).
