--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -67,7 +67,7 @@ The bootstrap script is also available at [path]``https://example.com/pub/bootst
 == Editing the Bootstrap Script
 
 
-In this section you will copy and modify the template bootstrap script you created from pass:c[xref:FILENAME.adoc#generate.bootstrap.script[]].
+In this section you will copy and modify the template bootstrap script you created.
 
 A minimal requirement when modifying a bootstrap script for use with {productname} is the inclusion of an activation key.
 
