--- a/modules/client-configuration/pages/script-client-proxy.adoc
+++ b/modules/client-configuration/pages/script-client-proxy.adoc
@@ -10,7 +10,7 @@ The bootstrap script requires some parameters (such as activation keys or GPG ke
 .Procedure: Registering clients to a proxy with a bootstrap script
 
 . Create a client activation key on the {productname} server using the {webui}.
-See xref:activation-keys[].
+See xref:client-configuration:clients-and-activation-keys.adoc[].
 . On the proxy, execute the [command]``mgr-bootstrap`` command line tool as {rootuser}.
 If needed, use the additional command line switches to tune your bootstrap script.
 To install a traditional client instead of a Salt client, ensure you use the [command]``--traditional`` switch.
@@ -22,4 +22,4 @@ To view available options type [command]``mgr-bootstrap --help`` from the comman
 ----
 +
 . Optional: edit the resulting bootstrap script.
-. Execute the bootstrap script on the clients, following the instructions in xref:run.bootstrap.script[].
+. Execute the bootstrap script on the clients.
