--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -73,7 +73,7 @@ You should see a base channel and a child channel for your architecture, for exa
  +- Ubuntu-18.04-SUSE-Manager-Tools for amd64
 ----
 . Create custom repositories to mirror the {ubuntu} packages.
-For more information on creating custom repositories, see xref:modules/administration/pages/channel-management.adoc[].
+For more information on creating custom repositories, see xref:administration:channel-management.adoc[].
 For example:
 +
 For `main`:
@@ -89,7 +89,7 @@ For `main-updates`:
 * Repository Type: deb
 
 . Create custom channels under the `pool` channel, mirroring the vendor channels.
-For more information on creating custom channels, see xref:modules/administration/pages/channel-management.adoc[].
+For more information on creating custom channels, see xref:administration:channel-management.adoc[].
 Ensure the custom channels you create have `AMD64 Debian` architecture.
 +
 For example:
