--- a/modules/client-configuration/pages/using-ssm.adoc
+++ b/modules/client-configuration/pages/using-ssm.adoc
@@ -9,7 +9,7 @@
 System Set Manager is used to administrate groups of systems, rather than performing actions on one system at a time.
 It works for both Salt and Traditional systems.
 
-For a complete list of the tasks that you can perform with the System Set Manager, see xref:``ref.webui.systems.ssm``.
+For a complete list of the tasks that you can perform with the System Set Manager, see xref:reference:systems/ssm-menu.adoc[].
 
 
 
