--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -1,14 +1,6 @@
 [[retail-components]]
 = Components
 
-
-
-
-
-[[retail.sect.components]]
-== Components
-
-
 {smr} uses a layered architecture:
 
 * The first layer contains the {susemgr} server and one or more build hosts.
@@ -101,7 +93,7 @@ You can use formulas to apply configuration patterns to your hardware groups.
 
 You can use default settings for formulas, or edit them to make them more specific to your environment.
 
-Formulas are discussed in more detail in this guide, at xref:retail_chap_formulas.adoc#retail.chap.formulas[Formulas Chapter].
+For more information about formulas, see xref:retail:retail-formulas.adoc[].
 
 
 
