--- a/modules/retail/pages/retail-install-packages.adoc
+++ b/modules/retail/pages/retail-install-packages.adoc
@@ -1,16 +1,5 @@
 [[retail-install-packages]]
 = Installing from Packages
-// Antora entities
-ifndef::backend-pdf[]
-include::ROOT:partial$entities.adoc[]
-endif::[]
-
-// PDF entities
-ifdef::backend-pdf[]
-include::_partials/entities.adoc[]
-endif::[]
-
-
 
 
 If you have chosen not to use the Unified Installer, you can install {smr} manually instead.
@@ -96,4 +85,4 @@ salt '*' saltutil.sync_all
 systemctl restart salt-master
 ----
 
-For more information about formulas, see xref:retail_chap_formulas.adoc#retail.chap.formulas[Formulas].
+For more information about formulas, see xref:retail:retail-formulas.adoc[].
