--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -101,7 +101,7 @@ The activation key should have the following channels:
 ----
 
 
-For mass deployments, see xref:retail_chap_admin.adoc#retail.sect.admin.branch_mass_config[Branch Server Mass Configuration].
+For mass deployments, see xref:retail:retail-mass-config.adoc[].
 
 
 When you are installing the branch server with a dedicated internal network, check that you are using the same fully qualified domain name (FQDN) on both the external and internal branch networks.
@@ -113,7 +113,7 @@ Before you configure the branch server, ensure you have decided on networking to
 
 The branch server can be configured automatically using the [command]``retail_branch_init`` command, as shown in this section.
 If you prefer to manually configure the branch server, you can do so using formulas.
-For more information about formulas, see xref:retail_chap_formulas.adoc#retail.chap.formulas[Formulas].
+For more information about formulas, see xref:retail:retail-formulas.adoc[].
 
 .Procedure: Configuring branch server formulas using helper script
 
