--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -5,7 +5,7 @@
 This section describes how to install {smr} from {sls} installation media.
 It assumes you have already registered the {susemgr} product with the {scc} and have a registration code.
 
-For information on registering with {scc}, or obtaining installation media, see xref:modules/installation/pages/general-requirements.adoc[Requirements].
+For information on registering with {scc}, or obtaining installation media, see xref:installation:general-requirements.adoc[].
 
 
 
