--- a/modules/retail/pages/retail-mass-config.adoc
+++ b/modules/retail/pages/retail-mass-config.adoc
@@ -31,7 +31,7 @@ If you need to change your configuration, you can edit the YAML file at any time
 
 
 Use the empty profiles together with activation keys to onboard all the systems of your infrastructure.
-Use an activation key to assign the channels listed in xref:retail_chap_install.adoc#retail.sect.install.install.config[Configuring Server].
+Use an activation key to assign the channels listed in xref:retail:retail-install-setup.adoc[].
 
 
 [[retail.sect.admin.terminal_mass_config]]
