--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -1,13 +1,6 @@
 [[retail-migration-slepostosuma]]
-= {slepos} 11 to {smr}
+= Migrate {slepos} 11 to {smr}
 
-
-
-
-
-
-[[retail_migr.sect.slepostosuma.s1]]
-== Migration from {slepos} 11 to {smr}
 
 This section describes migrating from an existing {slepos} 11 installation, to a new {susemgr} installation.
 You can perform this migration all at once by creating a data dump in a single file, then moving it to the new server; see <<retail_migr.sect.slepostosuma.s1.complete>>.
@@ -17,7 +10,7 @@ Importing and deploying the converted data can also be done in one step, or mult
 
 
 [[retail_migr.sect.slepostosuma.s1.complete]]
-=== Migration with Complete Data Dump
+== Migration with Complete Data Dump
 
 In this procedure, you create a single data dump in an XML file, convert it to YAML, and migrate it to the new infrastructure all at once.
 
@@ -63,9 +56,9 @@ retail_yaml --from-yaml retail.yml
 You can see statistical data while importing.  Then check the results in the {webui}. In menu:Main Menu[Systems > Systems > All], find empty profiles, and in menu:Main Menu[Systems > Groups], the groups for the hardware configuration, the branches, servers, and terminals.
 
 
-To finalize the branch server migration, you must install the branch server machines as Salt-based minions and bootstrap them as proxies.
-For more information about proxy installation, see xref:retail_chap_install.adoc#retail.sect.install.branch[Installing and Registering].
-For more information about using an activation key to assign the required channels, see xref:retail_chap_install.adoc#retail.sect.install.install.config[Configuring Server].
+To finalize the branch server migration, you must install the branch server machines as Salt minions and bootstrap them as proxies.
+For more information about proxy installation, see xref:retail:retail-install.adoc[].
+For more information about using an activation key to assign the required channels, see xref:retail:retail-install-setup.adoc[].
 After onboarded to {susemgr}, the branch servers machines are connected with the empty profiles (by FQDN), and so they will get the Retail configuration.
 
 After all the branches are migrated, shutdown and remove the old SLEPOS Admin Server.
@@ -73,7 +66,7 @@ After all the branches are migrated, shutdown and remove the old SLEPOS Admin Se
 
 
 [[retail_migr.sect.slepostosuma.s1.bbb]]
-=== Migration with Branch by Branch Data Dump
+== Migration with Branch by Branch Data Dump
 
 In this procedure, you migrate the SLEPOS infrastructure and the branches one by one, first exporting and then importing.
 
@@ -142,7 +135,7 @@ After all the branches are migrated, shut down and remove the old SLEPOS Admin S
 
 
 [[retail_migr.sect.slepostosuma.s1.x2y]]
-=== Converting XML to YAML
+== Converting XML to YAML
 
 When you perform a migration using one of the methods in this chapter, one of the steps takes the XML data dump file from {slepos}, and converts it to a YAML file for {smr}.
 The tool that performs this conversion has additional features, which are outlined in this section.
@@ -181,4 +174,3 @@ Alternatively, you can import [path]``retail.yml`` using this command to import 
 ----
 retail_yaml --only-new
 ----
-
