--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -16,4 +16,4 @@ B002.TOSHIBA-6140100-41BA03X-c643
 
 You can adjust this behavior by toggling the [systemitem]``DISABLE_HOSTNAME_ID`` and [systemitem]``DISABLE_UNIQUE_SUFFIX`` parameters in the PXE formula settings.
 
-For more information about the PXE formula, see xref:retail:retail-formulas[].
+For more information about the PXE formula, see xref:retail:retail-formulas.adoc[].
