cleanup: wording and typo

--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -1,16 +1,14 @@
 [[registering.clients.webui]]
 = Registering Clients with the {webui}
 
-
-The simplest method to register clients is using the {productname} {webui}.
-This method works for Salt clients only.
+Registering clients with the {productname} {webui} works for Salt minions only.
 
 
 
 .Procedure: Registering clients in the {webui}
 
 . In the {productname} {webui}, navigate to menu:Systems[Bootstrapping].
-. In the [guimenu]``Host`` field, type the fully-qualified domain name (FQDN) of the client to be bootstrapped.
+. In the [guimenu]``Host`` field, type the fully qualified domain name (FQDN) of the client to be bootstrapped.
 . In the [guimenu]``SSH Port`` field, type the SSH port number that will be used to connect and bootstrap the client.
 By default, the SSH  port is [systemitem]``22``.
 . In the [guimenu]``User`` field, type the username to log in to the client.
@@ -43,7 +41,8 @@ Either update your bootstrap repository to trust the key explicitly, or use the 
 ====
 
 
-To register Salt clients with a bootstrap repository, you will need to have already set up a {susemgr} tools repository, which is described in xref:quickstart3_chap_suma_keys_and_first_client.adoc#create.tools.repository[Create Tools Repository].
+To register Salt clients with a bootstrap repository, you will need to have already set up a {susemgr} tools repository.
+For more information, see xref:quickstart3_chap_suma_keys_and_first_client.adoc#create.tools.repository[Create Tools Repository].
 You will also need to have fully synchronized a base channel for clients to obtain software packages (for example: `SLES12-SP4-Pool_for_x86_64`).
 
 
