--- a/modules/reference/pages/systems/autoinst-overview.adoc
+++ b/modules/reference/pages/systems/autoinst-overview.adoc
@@ -19,7 +19,7 @@ It is not currently available for systems using Salt (system type [systemitem]``
 Kickstart files can be created, modified, and managed within the {productname} Web interface.
 
 {productname} also features the Cobbler installation server.
-Refer to: xref:client-configuration:cobbler.adoc[Cobbler] for more information.
+Refer to xref:client-configuration:cobbler.adoc[Cobbler] for more information.
 
 
 {productname} provides an interface for developing Kickstart and {ay} profiles that can be used to install {rhel} or {sle} on either new or already-registered systems automatically according to certain specifications.
