--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -16,7 +16,7 @@ ifndef::backend-pdf[]
 ** xref:kubernetes.adoc[Kubernetes]
 // Virtualization
 // This chapter only applies to traditional clients. Should either be deleted or moved to client cfg. LKB 2019-03-21
-//** xref:virtualization.adoc[Virtualization]
+** xref:virtualization.adoc[Virtualization]
 ** xref:public-cloud.adoc[Public Cloud]
 ** xref:virtual-hosts.adoc[Virtual Hosts]
 // ISS
@@ -85,7 +85,8 @@ include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
 
 // Virtualization
 // This chapter only applies to traditional clients. Should either be deleted or moved to client cfg. LKB 2019-03-21
-// include::modules/administration/pages/virtualization.adoc[leveloffset=+1]
+include::modules/administration/pages/virtualization.adoc[leveloffset=+1]
+
 include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
 
 include::modules/administration/pages/virtual-hosts.adoc[leveloffset=+1]
